--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
-    <main id="signed-out-flow" style="display: none">
+    <main id="signed-out-flow">
       <h1>Welcome to NEAR!</h1>
       <p>
         To make use of the NEAR blockchain, you need to sign in. The button
